stages/stage2/k8s/apps/notification/notification-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: apollo-airlines-apps
spec:
  selector:
    app: notification
  ports:
    - port: 8084
      targetPort: 8084
