stages/stage2/k8s/apps/notification/notification-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-allow-specific
  namespace: apollo-airlines-apps
spec:
  podSelector:
    matchLabels:
      app: notification
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: booking
      ports:
        - protocol: TCP
          port: 8084
  policyTypes:
    - Ingress
